# grammar-rs

./: README.md  rustfmt.toml
crates/grammar/: Cargo.toml  README.md
crates/grammar/src/: lib.rs
crates/grammar_english/: Cargo.toml  README.md
crates/grammar_russian/: Cargo.toml  README.md
crates/grammar_russian/src/: alphabet.rs  inflection_buffer.rs  lib.rs
crates/grammar_russian/src/categories/: abbrs.rs  animacy.rs  case.rs  case_and_number.rs  convert.rs  gender.rs  gender_and_animacy.rs  gender_animacy.rs  mod.rs  number.rs  ops.rs  traits.rs
crates/grammar_russian/src/declension/: declensions.rs  defs.rs  endings.rs  endings_data.rs  flags.rs  fmt.rs  from_str.rs  impl_adjective.rs  impl_fmt.rs  impl_noun.rs  impl_pronoun.rs  info.rs  mod.rs  stem_types.rs  stress_pattern.rs  stresses.rs
crates/grammar_russian/src/stress/: conversions.rs  convert.rs  defs.rs  fmt.rs  from_str.rs  impl_fmt.rs  impl_from.rs  impl_ops.rs  macro_internals.rs  methods.rs  mod.rs  types.rs
crates/grammar_russian/src/util/: const_traits.rs  const_utils.rs  mod.rs  unsafe_buf.rs  unsafe_parser.rs
